src/main/java/com/example/parser/interpreter/AmlDslParser.java
package com.example.parser.interpreter;
// Generated from AmlDsl.g4 by ANTLR 4.13.0

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AmlDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, FLOAT=23, INT=24, TRUE=25, 
		FALSE=26, WHITESPACE=27, IDENTIFIER=28, LPAREN=29, RPAREN=30, LBRACKET=31, 
		RBRACKET=32, LBRACE=33, RBRACE=34, DOT=35, PLUS=36, MINUS=37, MULTIPLY=38, 
		SLASH=39, MOD=40, NOT=41, EQUALS=42, NOT_EQUALS=43, LESS=44, LESS_EQUALS=45, 
		GREATER_EQUALS=46, GREATER=47, AND=48, OR=49, STRING=50, HASHTAG=51;
	public static final int
		RULE_start = 0, RULE_expr = 1, RULE_selection = 2, RULE_list = 3, RULE_method = 4, 
		RULE_object = 5, RULE_this = 6, RULE_property = 7, RULE_arguments = 8, 
		RULE_logical = 9, RULE_unaryLog = 10, RULE_memberLog = 11, RULE_relation = 12, 
		RULE_calc = 13, RULE_unary = 14, RULE_member = 15, RULE_literal = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expr", "selection", "list", "method", "object", "this", "property", 
			"arguments", "logical", "unaryLog", "memberLog", "relation", "calc", 
			"unary", "member", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'?'", "','", "'this'", "'=='", "'eq'", "'!='", "'ne'", "'and'", 
			"'AND'", "'or'", "'OR'", "'not'", "'<'", "'lt'", "'<='", "'le'", "'>='", 
			"'ge'", "'>'", "'gt'", "'mod'", "'div'", null, null, "'true'", "'false'", 
			null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'!'", null, null, null, null, null, null, "'&&'", 
			"'||'", null, "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "FLOAT", 
			"INT", "TRUE", "FALSE", "WHITESPACE", "IDENTIFIER", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "DOT", "PLUS", "MINUS", "MULTIPLY", 
			"SLASH", "MOD", "NOT", "EQUALS", "NOT_EQUALS", "LESS", "LESS_EQUALS", 
			"GREATER_EQUALS", "GREATER", "AND", "OR", "STRING", "HASHTAG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AmlDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AmlDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AmlDslParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			expr();
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ObjectExprContext extends ExprContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ObjectExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitObjectExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithmeticExprContext extends ExprContext {
		public CalcContext calc() {
			return getRuleContext(CalcContext.class,0);
		}
		public ArithmeticExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitArithmeticExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelectionExprContext extends ExprContext {
		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public SelectionExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitSelectionExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MethodCallContext extends ExprContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public MethodCallContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitMethodCall(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LogicalExprContext extends ExprContext {
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public LogicalExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitLogicalExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ListInitExprContext extends ExprContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListInitExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitListInitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new MethodCallContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				method();
				}
				break;
			case 2:
				_localctx = new ObjectExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				object();
				}
				break;
			case 3:
				_localctx = new LogicalExprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(39);
				logical(0);
				}
				break;
			case 4:
				_localctx = new ArithmeticExprContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(40);
				calc(0);
				}
				break;
			case 5:
				_localctx = new ListInitExprContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(41);
				list();
				}
				break;
			case 6:
				_localctx = new SelectionExprContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(42);
					list();
					}
					break;
				case 2:
					{
					setState(43);
					object();
					}
					break;
				case 3:
					{
					setState(44);
					method();
					}
					break;
				}
				setState(47);
				selection();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectionContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(AmlDslParser.DOT, 0); }
		public TerminalNode LBRACKET() { return getToken(AmlDslParser.LBRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(AmlDslParser.RBRACKET, 0); }
		public SelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selection; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitSelection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectionContext selection() throws RecognitionException {
		SelectionContext _localctx = new SelectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(DOT);
			setState(52);
			match(T__0);
			setState(53);
			match(LBRACKET);
			setState(54);
			expr();
			setState(55);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(AmlDslParser.LBRACE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(AmlDslParser.RBRACE, 0); }
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(LBRACE);
			setState(58);
			expr();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(59);
				match(T__1);
				setState(60);
				expr();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodContext extends ParserRuleContext {
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
	 
		public MethodContext() { }
		public void copyFrom(MethodContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RegistredMethodContext extends MethodContext {
		public TerminalNode HASHTAG() { return getToken(AmlDslParser.HASHTAG, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(AmlDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AmlDslParser.IDENTIFIER, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(AmlDslParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(AmlDslParser.LPAREN, i);
		}
		public List<ArgumentsContext> arguments() {
			return getRuleContexts(ArgumentsContext.class);
		}
		public ArgumentsContext arguments(int i) {
			return getRuleContext(ArgumentsContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(AmlDslParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(AmlDslParser.RPAREN, i);
		}
		public List<TerminalNode> DOT() { return getTokens(AmlDslParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AmlDslParser.DOT, i);
		}
		public RegistredMethodContext(MethodContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitRegistredMethod(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ObjectMethodContext extends MethodContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AmlDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AmlDslParser.IDENTIFIER, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(AmlDslParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(AmlDslParser.LPAREN, i);
		}
		public List<ArgumentsContext> arguments() {
			return getRuleContexts(ArgumentsContext.class);
		}
		public ArgumentsContext arguments(int i) {
			return getRuleContext(ArgumentsContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(AmlDslParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(AmlDslParser.RPAREN, i);
		}
		public List<TerminalNode> DOT() { return getTokens(AmlDslParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AmlDslParser.DOT, i);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class,0);
		}
		public ObjectMethodContext(MethodContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitObjectMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		try {
			int _alt;
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new ObjectMethodContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(70);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(68);
						object();
						}
						break;
					case 2:
						{
						setState(69);
						list();
						}
						break;
					}
					setState(73);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(72);
						selection();
						}
						break;
					}
					setState(75);
					match(DOT);
					}
					break;
				}
				setState(79);
				match(IDENTIFIER);
				setState(80);
				match(LPAREN);
				setState(81);
				arguments();
				setState(82);
				match(RPAREN);
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83);
						match(DOT);
						setState(84);
						match(IDENTIFIER);
						setState(85);
						match(LPAREN);
						setState(86);
						arguments();
						setState(87);
						match(RPAREN);
						}
						} 
					}
					setState(93);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				break;
			case 2:
				_localctx = new RegistredMethodContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(HASHTAG);
				setState(95);
				match(IDENTIFIER);
				setState(96);
				match(LPAREN);
				setState(97);
				arguments();
				setState(98);
				match(RPAREN);
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(99);
						match(DOT);
						setState(100);
						match(IDENTIFIER);
						setState(101);
						match(LPAREN);
						setState(102);
						arguments();
						setState(103);
						match(RPAREN);
						}
						} 
					}
					setState(109);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectContext extends ParserRuleContext {
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
	 
		public ObjectContext() { }
		public void copyFrom(ObjectContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ListAccessContext extends ObjectContext {
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class,0);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(AmlDslParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(AmlDslParser.LBRACKET, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(AmlDslParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(AmlDslParser.RBRACKET, i);
		}
		public List<TerminalNode> DOT() { return getTokens(AmlDslParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AmlDslParser.DOT, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(AmlDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AmlDslParser.IDENTIFIER, i);
		}
		public ListAccessContext(ObjectContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitListAccess(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ThisObjectContext extends ObjectContext {
		public ThisContext this_() {
			return getRuleContext(ThisContext.class,0);
		}
		public ThisObjectContext(ObjectContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitThisObject(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PropertyAccessContext extends ObjectContext {
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public PropertyAccessContext(ObjectContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitPropertyAccess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_object);
		int _la;
		try {
			int _alt;
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new PropertyAccessContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				property();
				}
				break;
			case 2:
				_localctx = new ListAccessContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
				case STRING:
					{
					setState(113);
					property();
					}
					break;
				case LBRACE:
					{
					setState(114);
					list();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DOT) {
					{
					setState(117);
					selection();
					}
				}

				setState(124); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(120);
						match(LBRACKET);
						setState(121);
						expr();
						setState(122);
						match(RBRACKET);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(126); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(128);
						match(DOT);
						setState(129);
						match(IDENTIFIER);
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				break;
			case 3:
				_localctx = new ThisObjectContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				this_();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThisContext extends ParserRuleContext {
		public TerminalNode HASHTAG() { return getToken(AmlDslParser.HASHTAG, 0); }
		public ThisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_this; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitThis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThisContext this_() throws RecognitionException {
		ThisContext _localctx = new ThisContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_this);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(HASHTAG);
			setState(139);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AmlDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AmlDslParser.IDENTIFIER, i);
		}
		public TerminalNode STRING() { return getToken(AmlDslParser.STRING, 0); }
		public List<TerminalNode> DOT() { return getTokens(AmlDslParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(AmlDslParser.DOT, i);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmlDslVisitor ) return ((AmlDslVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}
